@@ -1252,3 +1252,5 @@ base graphics.
     has been added.
   - Added asHomogeneous2 and asEuclidean2 to work directly
     with 3 x n and 4 x n matrices.
+  - The width and height of an rglwidget() once again adapt
+    to the viewer window in RStudio (issue #74).
